--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -70,6 +70,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authorizer.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Loan_Inspector.cs" />
+    <Compile Include="Loan_Officer.cs" />
+    <Compile Include="Login.cs" />
+    <Compile Include="Payment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
